--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-go@v5
     
     - name: Download dependencies
-      run: go download
+      run: go mod download
 
     - name: Test
       run: go test ./...
