--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -23,9 +23,17 @@ jobs:
       run: go mod download
 
     - name: Test
-      run: go test -coverprofile=coverage.txt ./...
+      env:
+        GOTESTSUM_JUNITFILE: junit.xml
+      run: make
       
     - name: Upload results to Codecov
       uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+    
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
